--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,41 +58,12 @@ jobs:
           name: dist
           path: dist/*
 
-  publish:
-    name: Publish to PyPI
+  pypi-publish:
+    name: upload release to PyPI
     runs-on: ubuntu-latest
-    needs: test-and-build
-    # run when a tag is pushed OR when manually dispatched
-    if: >-
-      startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
-
+    environment: pypi
+    permissions:
+      id-token: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.12
-
-      - name: Install packaging tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install build twine
-
-      - name: Download dist (if produced in earlier job)
-        if: ${{ always() }}
-        uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: dist
-
-      - name: Publish to PyPI
-        shell: bash
-        run: |
-          set -euo pipefail
-          echo "Publishing to: pypi"
-          # Provide TWINE_PASSWORD from repo secret to the runner via GITHUB_ENV
-          echo "TWINE_PASSWORD=${{ secrets.PYPI_API_TOKEN }}" >> $GITHUB_ENV
-          export TWINE_USERNAME="__token__"
-          python -m twine upload dist/*
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
