--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "zvic"
-version = "2025.34rc4"
+version = "2025.34"
 description = "Zero-Version Interface Contracts (ZVIC) - signature-based compatibility for Python modules."
 authors = [
     { name = "Anselm Kiefner" }
